# untitled34

./: .gitignore  Cargo.toml
shared/: Cargo.toml  pyproject.toml
shared/src/: cosine_sim.rs  hnsw.rs  lib.rs  neko_uuid.rs  opendal.rs  point_explorer.rs  qdrant.rs  structure.rs
stage0/: Cargo.toml
stage0/src/: main.rs
stage1/: Cargo.toml
stage1/src/: main.rs
stage10/: Cargo.toml
stage10/src/: main.rs
stage11/: Cargo.toml
stage11/src/: main.rs
stage12/: Cargo.toml
stage12/src/: main.rs
stage13/: Cargo.toml
stage13/src/: main.rs
stage14/: Cargo.toml
stage14/src/: main.rs
stage15/: Cargo.toml
stage15/src/: main.rs
stage16/: Cargo.toml
stage16/src/: main.rs
stage17/: Cargo.toml
stage17/src/: main.rs
stage18/: Cargo.toml
stage18/src/: main.rs
stage19/: Cargo.toml
stage19/src/: main.rs
stage2/: Cargo.toml
stage2/src/: main.rs
stage3/: Cargo.toml
stage3/src/: main.rs
stage4/: Cargo.toml
stage4/src/: main.rs
stage5/: Cargo.toml
stage5/src/: main.rs
stage6/: Cargo.toml
stage6/src/: main.rs
stage7/: Cargo.toml
stage7/src/: main.rs
stage8/: Cargo.toml
stage8/src/: main.rs
stage9/: Cargo.toml
stage9/benches/: clip_bench.rs
stage9/src/: clip_worker.rs  cosine_sim.rs  gif_worker.rs  lib.rs  main.rs  s3_downloader.rs  structure.rs
