[workspace]
resolver = "2"
members = ["shared", "stage1", "stage2", "stage3", "stage4", "stage5", "stage6", "stage7", "stage8", "stage9", "stage10", "stage11"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mimalloc = "0.1.46"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde-pickle = "1.2.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
indicatif = { version = "0.17.11", features = ["rayon", "tokio"] }
rayon = "1.10.0"
qdrant-client = "1.14.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
prost = "0.13.5"
plotters = "0.3.7"
opendal = { version = "0.53.3", features = ["services-s3", "layers-tracing"] }
serde_json = "1.0.140"
infer = "0.19.0"
walkdir = "2.5.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
clap = { version = "4.5.39", features = ["derive"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
bytes = "1.10.1"
futures = "0.3.31"
rand = "0.9.1"
half = { version = "2.6.0", features = ["serde"] }
criterion = "0.6.0"
image = { version = "0.25.6", features = ["rayon", "gif"] }
image_hasher = "3.0.0"
candle-core = { git = "https://github.com/NekoImageLand/candle", branch = "clip/baai" }
candle-nn = { git = "https://github.com/NekoImageLand/candle", branch = "clip/baai" }
candle-transformers = { git = "https://github.com/NekoImageLand/candle", branch = "clip/baai" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
