[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
sha1 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
serde-pickle = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
half = { workspace = true, optional = true }
opendal = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
rand_pcg.workspace = true

[lib]
name = "shared"
crate-type = ["rlib", "cdylib"]

[features]
default = ["shared-structure"]
shared-structure = []
neko-uuid = ["sha1", "hex", "thiserror", "uuid/v5"]
cosine-sim = ["half"]
opendal-data-compat = []
opendal-ext = ["opendal", "anyhow"]
qdrant-ext = ["qdrant-client", "anyhow"]
point-explorer = ["cosine-sim", "thiserror", "serde_with", "serde-pickle", "indexmap"]
shared-pyo3 = ["pyo3"]
point-explorer-pyo3 = ["shared-pyo3", "point-explorer"]