[package]
name = "stage0"
version.workspace = true
edition.workspace = true

[dependencies]
shared = {path = "../shared", features = ["qdrant-ext", "point-explorer"]}
mimalloc.workspace = true
tokio.workspace = true
qdrant-client.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
indicatif.workspace = true
serde.workspace = true
serde-pickle.workspace = true
uuid.workspace = true
