[package]
name = "stage1"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared", features = ["point-explorer"]}
serde-pickle.workspace = true
petal-clustering.workspace = true
petal-neighbors.workspace = true
ndarray.workspace = true
bincode.workspace = true
uuid.workspace = true
indicatif.workspace = true
rayon.workspace = true