[package]
name = "stage15"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared", features = ["neko-uuid"] }
uuid.workspace = true
clap.workspace = true
walkdir.workspace = true
infer.workspace = true
indicatif.workspace = true
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true