[package]
name = "stage18"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared", features = ["point-explorer"] }
mimalloc.workspace = true
rand.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde-pickle.workspace = true
petal-clustering.workspace = true
petal-neighbors.workspace = true
ndarray.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true