[package]
name = "stage2"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared", features = ["qdrant-ext", "opendal-ext"]}
bincode.workspace = true
serde-pickle.workspace = true
uuid.workspace = true
indicatif.workspace = true
qdrant-client.workspace = true
tokio.workspace = true
prost.workspace = true
opendal.workspace = true