[package]
name = "stage5"
version.workspace = true
edition.workspace = true

[dependencies]
shared = {path = "../shared", features = ["opendal-data-compat", "opendal-ext"]}
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
clap.workspace = true
tracing-appender.workspace = true