[package]
name = "stage6"
version.workspace = true
edition.workspace = true

[dependencies]
shared = {path = "../shared", features = ["opendal-ext"]}
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
infer.workspace = true
bytes.workspace = true
serde_json.workspace = true
futures.workspace = true
clap.workspace = true
tracing-appender.workspace = true
bincode.workspace = true
serde.workspace = true