[package]
name = "stage9"
version.workspace = true
edition.workspace = true

[dependencies]
shared = {path = "../shared", features = ["opendal-data-compat", "opendal-ext", "cosine-sim"]}
mimalloc.workspace = true
bincode.workspace = true
serde-pickle.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
futures.workspace = true
image.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
half.workspace = true
serde_json.workspace = true
serde.workspace = true
image_hasher.workspace = true

[dev-dependencies]
criterion.workspace = true

[lib]
name = "stage9"
path = "src/lib.rs"

[[bench]]
name = "clip_bench"